# job-discovery

./: .gitignore  DESIGN.md  PLAN.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-16-jd-recovery-hybrid.md
docs/superpowers/specs/: 2026-05-16-jd-recovery-hybrid-design.md
job_discovery/: __init__.py  cli.py  fetch_jd.py  score.py  search.py  state.py  types.py
job_discovery/prompts/: fetch_jd_system.txt  scoring_system.txt
scripts/: backfill_scored_cache.py  register_task.ps1  smoke_batch.py
tests/: test_cli.py  test_fetch_jd.py  test_score.py  test_search.py  test_state.py
