[project]
name = "job-discovery"
version = "0.1.0"
description = "Daily job discovery + scoring for Mizzix"
requires-python = ">=3.11"
dependencies = [
    "python-jobspy>=1.1.79",
    "claude-agent-sdk>=0.0.21",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.scripts]
job-discovery = "job_discovery.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["job_discovery*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
